--- a/stickian_empire/templates/auth/register.html
+++ b/stickian_empire/templates/auth/register.html
@@ -1,15 +1,20 @@
 {% extends 'base.html' %}
 
-{% block header %}
-  <h1>{% block title %}Register{% endblock %}</h1>
-{% endblock %}
 
 {% block content %}
-  <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Register">
-  </form>
+  <div class="login-form">
+    <h1>{% block title %}Register{% endblock %}</h1>
+    {% for message in get_flashed_messages() %}
+      <div class="flash">{{ message }}</div>
+    {% endfor %}
+    <form method="post">
+      <label for="username">Username</label>
+      <input name="username" id="username" required>
+      <label for="password">Password</label>
+      <input type="password" name="password" id="password" required>
+      <label for="cpassword">Confirm Password</label>
+      <input type="password" name="cpassword" id="cpassword" required>
+      <input type="submit" value="Register">
+    </form>
+  </div>
 {% endblock %}
