--- a/stickian_empire/static/style.css
+++ b/stickian_empire/static/style.css
@@ -16,7 +16,7 @@ nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
 nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
 
 /* login form */
-.login-form {float: right; margin: 100px 200px; max-width: 300px; padding: 20px;}
+.login-form {float: right; margin: 100px 200px; width: 300px; padding: 20px;}
 .login-form input {margin: 20px 0;}
 .login-form input[type=submit] { align-self: start; min-width: 10em; }
 
