Added routes and partial loading of the page.

--- a/stickian_empire/templates/game/home.html
+++ b/stickian_empire/templates/game/home.html
@@ -2,4 +2,17 @@
 
 {% block content %}
 <h1>{% block title %}Home page{% endblock %}</h1>
+<script>
+    async function fetchHtmlAsText(url) {
+        return await (await fetch(url)).text();
+    }
+
+    async function loadWindow(name) {
+        const contentDiv = document.getElementById("window");
+        contentDiv.innerHTML = await fetchHtmlAsText("game/windows/"+name);
+    }
+</script>
+<button onclick="loadWindow('profile')">Load Profile Test</button>
+<button onclick="loadWindow('map')">Load Map Test</button>
+<div id="window"></div>
 {% endblock %}
