--- a/stickian_empire/templates/game/home.html
+++ b/stickian_empire/templates/game/home.html
@@ -6,7 +6,9 @@
 {% block title %}Home page{% endblock %}
 {% block content %}
 <h1>Home</h1>
-<button onclick="loadWindow('profile')">Load Profile Test</button>
-<button onclick="loadWindow('map')">Load Map Test</button>
+<button onclick="loadWindow('profile')">Profile</button>
+<button onclick="loadWindow('map')">Map</button>
+<button onclick="loadWindow('overview')">Overview</button>
+<button onclick="loadWindow('detail')">Detail</button>
 <div id="window"></div>
 {% endblock %}
